// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metric component does not render warning badge when no warning present 1`] = `
<EuiFlexItem
  css={[Function]}
  grow={false}
>
  <EuiText
    color="subdued"
    css={[Function]}
    size="s"
  >
    <span>
      220
    </span>
  </EuiText>
</EuiFlexItem>
`;

exports[`Metric component renders warning badge 1`] = `
<EuiFlexItem
  css={[Function]}
  grow={false}
>
  <EuiBadge
    color="warning"
  >
    220
  </EuiBadge>
</EuiFlexItem>
`;
